# multiplayer-fps

./: Cargo.toml  README.md
src/client/plugins/: world_plugin.rs
src/client/resources/: network_resource.rs
src/client/systems/player/: setup_player.rs
src/client/systems/world/: collider_detect_world.rs
src/common/network/: protocol.rs
