[package]
name = "multiplayer-fps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "./src/bin/client.rs"

[[bin]]
name = "server"
path = "./src/bin/server.rs"

[dependencies]
bevy = "0.15.1"
# rand = "0.8.5"
rapier3d = "0.23.0"
serde = "1.0.217"
tokio = { version = "1", features = ["full"] }
# mini-redis = "0.4"
bincode = "1.3.3"
thiserror = "2.0.11"
serde_json = "1.0.137"
bevy_rapier3d = "0.28.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
